--- a/physics_engine/basic_model.ipynb
+++ b/physics_engine/basic_model.ipynb
@@ -66,7 +66,10 @@
     "        return np.sqrt(np.sum(np.power(a,2)))\n",
     "\n",
     "    def print(self):\n",
-    "        print(self.x.round(3), self.y.round(3), self.z.round(3))"
+    "        print(self.x.round(3), self.y.round(3), self.z.round(3))\n",
+    "\n",
+    "    def to_tuple(self):\n",
+    "        return (self.x, self.y, self.z)"
    ]
   },
   {
@@ -77,13 +80,11 @@
    "source": [
     "class spring(object):\n",
     "    def __init__(self, start, end):\n",
-    "        self.start = start\n",
-    "        self.end = end\n",
-    "        self.relaxed_length = (end-start).dist()\n",
+    "        self.start = *start\n",
+    "        self.end = *end\n",
+    "        self.relaxed_length = (end-start).dist()*2 # THIS IS FOR TESTING\n",
     "        \n",
-    "    def force(self, startMove, endMove):\n",
-    "        newEnd = self.end + endMove\n",
-    "        newStart = self.start + startMove\n",
+    "    def force(self, newStart, newEnd):\n",
     "        newDist = (newEnd-newStart).dist()\n",
     "        force = newDist-self.relaxed_length\n",
     "        forceVector = force*(newEnd-newStart)\n",
@@ -110,18 +111,60 @@
     "            (-1, 1, -1),\n",
     "            (-1, -1, 1),\n",
     "        ]\n",
-    "        indices = [\n",
+    "        self.indices = [\n",
     "            (0,1),(0,2),(0,3),\n",
     "            (1,2),(1,3),\n",
     "            (2,3),\n",
     "        ]\n",
     "        self.pts = [point(*x) for x in locs]\n",
-    "        self.springs = [spring(self.pts[x[0]],self.pts[x[1]]) for x in indices]\n",
+    "        self.springs = [spring(self.pts[x[0]],self.pts[x[1]]) for x in self.indices]\n",
     "        \n",
+    "    def sumForces(self):\n",
+    "        norm = 10\n",
+    "        counter = 0\n",
+    "        while norm > 2 and counter < 10:\n",
+    "            counter += 1\n",
+    "            norm = 0.\n",
+    "            forces = [point(0,0,0) for i in range(len(self.pts))]\n",
+    "            for i in range(len(self.springs)):\n",
+    "                self.springs[i].start.print()\n",
+    "                f1,f2 = self.springs[i].force(self.springs[i].start, self.springs[i].end)            \n",
+    "                forces[self.indices[i][0]] += f1\n",
+    "                forces[self.indices[i][1]] += f2\n",
+    "\n",
+    "            for i in range(len(forces)):\n",
+    "                self.pts[i] += forces[i]*.1\n",
+    "                norm += forces[i].dist()\n",
+    "\n",
+    "            print('at iter ',counter,' pts are at:')\n",
+    "            for i in range(len(forces)):\n",
+    "                #forces[i].print()\n",
+    "                self.pts[i].print()\n",
+    "                pass\n",
+    "            print(norm.round(2))\n",
+    "            pass\n",
+    "            \n",
+    "    def write(self, name):\n",
+    "        from json import dump\n",
+    "        jsonDict = {\n",
+    "            'pts':[x.to_tuple() for x in self.pts],\n",
+    "            'springs': self.indices\n",
+    "                   }\n",
+    "        with open(name,'w') as file:\n",
+    "            dump(jsonDict, file)\n",
+    "            \n",
     "    def print(self):\n",
     "        for pt in self.pts: pt.print()\n",
-    "        for s in self.springs: s.print()"
+    "        for s in self.springs: s.print()\n",
+    "            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -131,6 +174,22 @@
    "source": [
     "first = tetrahedron()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first.sumForces()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -157,6 +216,47 @@
    "outputs": [],
    "source": [
     "s.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### I should see it writing to file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rm /Users/elliottperryman/junk.json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first.write('/Users/elliottperryman/junk.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat /Users/elliottperryman/junk.json"
    ]
   },
   {
@@ -209,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for z in s.force(zero, move): z.print()"
+    "for z in s.force(p1+zero, p2+move): z.print()"
    ]
   },
   {
@@ -234,8 +334,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for z in s.force(zero, move): z.print()"
+    "for z in s.force(p1+zero, p2+move): z.print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
