fixed connection betwixt springs and points

--- a/physics_engine/basic_model.ipynb
+++ b/physics_engine/basic_model.ipynb
@@ -31,11 +31,6 @@
     "        self.y = y\n",
     "        self.z = z\n",
     "        \n",
-    "    def move(self, x, y, z):\n",
-    "        self.x += x\n",
-    "        self.y += y\n",
-    "        self.z += z\n",
-    "        \n",
     "    def __sub__(self, other):\n",
     "        x_diff = self.x-other.x\n",
     "        y_diff = self.y-other.y\n",
@@ -49,7 +44,7 @@
     "        z_diff = self.z+other.z\n",
     "        pt = point(x_diff, y_diff, z_diff)\n",
     "        return pt   \n",
-    "    \n",
+    "\n",
     "    def __mul__(self, scalar):\n",
     "        x_diff = self.x*scalar\n",
     "        y_diff = self.y*scalar\n",
@@ -60,6 +55,11 @@
     "    def __rmul__(self, scalar):\n",
     "        return self.__mul__(scalar)\n",
     "    \n",
+    "    def move(self, pt):\n",
+    "        self.x += pt.x\n",
+    "        self.y += pt.y\n",
+    "        self.z += pt.z\n",
+    "        \n",
     "    def dist(self):\n",
     "        a = np.array([self.x,self.y,self.z],\n",
     "                     dtype=np.float64)\n",
@@ -80,9 +80,9 @@
    "source": [
     "class spring(object):\n",
     "    def __init__(self, start, end):\n",
-    "        self.start = *start\n",
-    "        self.end = *end\n",
-    "        self.relaxed_length = (end-start).dist()*2 # THIS IS FOR TESTING\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "        self.relaxed_length = (end-start).dist() #+ 1.1715728752538097 # THIS IS FOR TESTING - this makes the dists ~4\n",
     "        \n",
     "    def force(self, newStart, newEnd):\n",
     "        newDist = (newEnd-newStart).dist()\n",
@@ -117,32 +117,26 @@
     "            (2,3),\n",
     "        ]\n",
     "        self.pts = [point(*x) for x in locs]\n",
-    "        self.springs = [spring(self.pts[x[0]],self.pts[x[1]]) for x in self.indices]\n",
+    "        self.springs = [spring(self.pts[start],self.pts[end]) for (start,end) in self.indices]\n",
     "        \n",
     "    def sumForces(self):\n",
     "        norm = 10\n",
     "        counter = 0\n",
-    "        while norm > 2 and counter < 10:\n",
+    "\n",
+    "        while counter < 200 and norm > 1e-4:\n",
+    "            \n",
     "            counter += 1\n",
     "            norm = 0.\n",
     "            forces = [point(0,0,0) for i in range(len(self.pts))]\n",
+    "\n",
     "            for i in range(len(self.springs)):\n",
-    "                self.springs[i].start.print()\n",
     "                f1,f2 = self.springs[i].force(self.springs[i].start, self.springs[i].end)            \n",
     "                forces[self.indices[i][0]] += f1\n",
     "                forces[self.indices[i][1]] += f2\n",
     "\n",
     "            for i in range(len(forces)):\n",
-    "                self.pts[i] += forces[i]*.1\n",
+    "                self.pts[i].move(forces[i]*.1)\n",
     "                norm += forces[i].dist()\n",
-    "\n",
-    "            print('at iter ',counter,' pts are at:')\n",
-    "            for i in range(len(forces)):\n",
-    "                #forces[i].print()\n",
-    "                self.pts[i].print()\n",
-    "                pass\n",
-    "            print(norm.round(2))\n",
-    "            pass\n",
     "            \n",
     "    def write(self, name):\n",
     "        from json import dump\n",
@@ -181,6 +175,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "4. - (first.pts[0]-first.pts[1]).dist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in first.pts:\n",
+    "    p.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "first.sumForces()"
    ]
   },
@@ -189,7 +202,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "(first.pts[0]-first.pts[1]).dist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in first.pts:\n",
+    "    p.print()"
+   ]
   },
   {
    "cell_type": "code",
@@ -238,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rm /Users/elliottperryman/junk.json"
+    "rm junk.json"
    ]
   },
   {
@@ -247,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "first.write('/Users/elliottperryman/junk.json')"
+    "first.write('./junk.json')"
    ]
   },
   {
@@ -256,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat /Users/elliottperryman/junk.json"
+    "cat junk.json"
    ]
   },
   {
@@ -375,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
