as john mayer says, gravity keeps on pulling me down

--- a/physics_engine/basic_model.ipynb
+++ b/physics_engine/basic_model.ipynb
@@ -52,6 +52,12 @@
     "        pt = point(x_diff, y_diff, z_diff)\n",
     "        return pt \n",
     "    \n",
+    "    def __pow__(self, scalar):\n",
+    "        x_pow = self.x**scalar\n",
+    "        y_pow = self.y**scalar\n",
+    "        z_pow = self.z**scalar\n",
+    "        return point(x_pow, y_pow, z_pow)\n",
+    "    \n",
     "    def __rmul__(self, scalar):\n",
     "        return self.__mul__(scalar)\n",
     "    \n",
@@ -82,12 +88,16 @@
     "    def __init__(self, start, end):\n",
     "        self.start = start\n",
     "        self.end = end\n",
-    "        self.relaxed_length = (end-start).dist() #+ 1.1715728752538097 # THIS IS FOR TESTING - this makes the dists ~4\n",
+    "        self.relaxed_length = (end-start).dist() + 0.1715728752538097 # THIS IS FOR TESTING - this makes the dists ~4\n",
     "        \n",
     "    def force(self, newStart, newEnd):\n",
     "        newDist = (newEnd-newStart).dist()\n",
     "        force = newDist-self.relaxed_length\n",
     "        forceVector = force*(newEnd-newStart)\n",
+    "        # add gravity\n",
+    "        gravity = point(0, 0, -2*(newEnd - newStart).z)\n",
+    "        forceVector += gravity\n",
+    "        \n",
     "        return forceVector, -1.*forceVector\n",
     "        \n",
     "    def print(self):\n",
@@ -123,7 +133,7 @@
     "        norm = 10\n",
     "        counter = 0\n",
     "\n",
-    "        while counter < 200 and norm > 1e-4:\n",
+    "        while counter < 20 and norm > 1e-4:\n",
     "            \n",
     "            counter += 1\n",
     "            norm = 0.\n",
@@ -135,8 +145,11 @@
     "                forces[self.indices[i][1]] += f2\n",
     "\n",
     "            for i in range(len(forces)):\n",
-    "                self.pts[i].move(forces[i]*.1)\n",
+    "                self.pts[i].move(.1 * forces[i])\n",
     "                norm += forces[i].dist()\n",
+    "            print(norm)\n",
+    "        if counter == 200: \n",
+    "            raise ValueError('Could not converge to structure')\n",
     "            \n",
     "    def write(self, name):\n",
     "        from json import dump\n",
@@ -175,15 +188,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "4. - (first.pts[0]-first.pts[1]).dist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "for p in first.pts:\n",
     "    p.print()"
    ]
@@ -204,6 +208,15 @@
    "outputs": [],
    "source": [
     "(first.pts[0]-first.pts[1]).dist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "4. - (first.pts[0]-first.pts[1]).dist()"
    ]
   },
   {
